@@ -216,6 +216,7 @@ debbugs (2.4.2) UNRELEASED; urgency=low
     - Distinguish between reports and followups (closes: #459866)
     - Allow for the archiving of bugs in removed packages (closes: #475622)
     - Add Text::Template based templating system (closes: #36814)
+    - Add new uservalue feature to Debbugs::User
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
